# speedystats

./: README.md  benchmarking.py  pyproject.toml  test_faststats.py  workspace.ipynb
.github/workflows/: tests.yml
_old_faststats/: __init__.py  _numba.py  faststats.py
benchmarking/: benchmarking.py  new_bm.py  new_bm_train.py
benchmarking/visualize/: speeduppredictor.tsx  visualize.js
faststats/: __init__.py  faststats.py  utils.py
faststats/numba/: nanmean.py  nanmedian.py  nanpercentile.py  nanquantile.py  nanstd.py  nansum.py  nanvar.py
faststats2/: faststats.py  routing.py
faststats2/numba/: average.py  mean.py  median.py  nanmean.py  nanmedian.py  nanpercentile.py  nanquantile.py  nanstd.py  nansum.py  nanvar.py  percentile.py  ptp.py  quantile.py  std.py  sum.py  var.py
ideas/: Suggestions.md  TODO.md  performance_improvements.md
speedystats/: __init__.py  speedystats.py
speedystats/numba/: nanpercentile.py  nanquantile.py  percentile.py  quantile.py
tests/: conftest.py  test_basic_stats.py  test_nan_stats.py  test_percentile_stats.py  test_utils.py  test_zscore_stats.py
tools/: config.yml  generate_code.py  generate_numba_code.py
